fix: [pd-1321] adjust gender should be center and overflow scroll

--- a/src/component/HeaderGenders/HeaderGenders.style.scss
+++ b/src/component/HeaderGenders/HeaderGenders.style.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   @include mobile {
-    justify-content: initial;
+    justify-content: space-around;
     overflow-x: scroll;
   }
   
