--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -539,6 +539,7 @@ main {
         justify-content: center;
         .GenderButton-Button {
           padding: 0 0px;
+          text-wrap: nowrap;
         }
       }
     }
